<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/byekan_bold"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weight_cardview"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/weight_text_valu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/shabnam"
                android:gravity="left|center"
                android:textColor="#212121"
                android:textSize="17sp"
                android:textStyle="bold"


                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_mdi_weight_kilogram"
                android:fontFamily="@font/byekan_bold"
                android:gravity="right|center"
                android:text="@string/weight"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exercise_card_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/exercise_switch"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0"


                />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_emojione_person_lifting_weights_medium_skin_tone"
                android:fontFamily="@font/byekan_bold"
                android:gravity="right|center"
                android:text="@string/areYouExercise"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/glass_size_card_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/glass_size_text_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/shabnam"
                android:gravity="left|center"
                android:textColor="#212121"
                android:textSize="15sp"
                android:textStyle="bold"

                />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_twemoji_glass_of_water"
                android:fontFamily="@font/byekan_bold"
                android:gravity="right|center"
                android:text="@string/glassSize"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/time_cardview"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_cardview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal"

            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_text_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/shabnam"
                android:gravity="left|center"
                android:textColor="#212121"
                android:textSize="17sp"
                android:textStyle="bold"

                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_round_watch_later"
                android:fontFamily="@font/byekan_bold"
                android:gravity="right|center"
                android:text="@string/time"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/byekan_bold"
        android:text="@string/aboutUs"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_time_cardview" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/email_card_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">


         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/shabnam"
                android:gravity="left|center"
                android:text="@string/emailAddress"
                android:textColor="#212121"
                android:textSize="@dimen/emailTextSize"
                android:textStyle="bold"

                />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_email"
                android:fontFamily="@font/byekan_bold"
                android:gravity="right|center"
                android:text="@string/email"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/bird_drink_water"
        android:layout_width="@dimen/birdDrinkWaterWidth"
        android:layout_height="@dimen/birdDrinkWaterHeight"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/birdDrinkWaterMarginTop"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_card_view"
        app:srcCompat="@drawable/ic_undraw_refreshing_beverage_td3r"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/f_yekan"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bird_drink_water" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sleep_time_cardview"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glass_size_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal"

            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/wake_up_time_text_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/shabnam"
                android:gravity="right|center"
                android:textColor="#212121"
                android:textSize="15sp"
                android:textStyle="bold"


                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sleep_time_text_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/shabnam"
                android:gravity="left|center"
                android:textColor="#212121"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginRight="50dp"

                />



            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_icon_park_sleep"
                android:fontFamily="@font/byekan_bold"
                android:gravity="right|center"
                android:text="@string/sleepTIme"
                android:textSize="17sp"
                android:textStyle="bold" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>